--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -12,7 +12,7 @@
     },
     {
       "title": "Posture Detection YOLOv8",
-      "imgSrc": "assets/images/posture_detection.png",
+      "imgSrc": "assets/images/posture_detection.jpg",
       "link": "https://github.com/SubekSharma/posture_detection_yolov8_transferlearning"
     },
     {
